--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -38,7 +38,7 @@ hr {
     height: 100%;
     width: 100%;
     padding: 0;
-    z-index: 99993;
+    z-index: 9993;
 }
 
 .padding {
@@ -225,7 +225,7 @@ textarea.x-form-field {
     background-repeat:repeat-x;
     position: relative;
     text-shadow:1px -1px 0 #1f1f1f;
-    z-index: 99995;
+    z-index: 9995;
 }
 #modx-login-user {
     font-weight: bold;
@@ -574,7 +574,7 @@ table.classy tr.odd td {
     margin-left: 1em;
     position: relative;
     width: 78%;
-    z-index: 99996;
+    z-index: 9996;
 }
 
 #modx-topnav {
@@ -593,7 +593,7 @@ ul#modx-topnav {
     padding:0;
     text-shadow:-1px 1px 0 #1F1F1F;
     border-bottom: 1px solid #1E1E1E;
-    z-index: 99997;
+    z-index: 9997;
 }
 ul#modx-topnav li {
     float: left;
@@ -601,7 +601,7 @@ ul#modx-topnav li {
     padding:5px 13px;
     position: relative;
     background:transparent url(../images/style/separator/menu_sep.png) no-repeat scroll right 0;
-    z-index: 99998;
+    z-index: 9998;
 }
 ul#modx-topnav li a{
     padding: 12px 5px 13px;
@@ -619,7 +619,7 @@ ul#modx-topnav li ul.modx-subnav {
     list-style: none;
     font-size:12px;
     position: absolute; /*--Important - Keeps modx-subnav from affecting main navigation flow--*/
-    z-index: 99999 !important;
+    z-index: 9999 !important;
     left: 0; 
     top: 46px;
     background: #333;
